# weird-rtos

./: .gitattributes  .gitignore  CMakeLists.txt  GUIDEALL.md  LICENSE.md  README.md
api/: CMakeLists.txt
api/tftp/: tftps.c  tftps.h
api/weird_view/: weird_view.h  weird_view_server.c  weird_view_server.h
api/weird_view_host/: device_discovery.py  device_selector.py  device_selector_ui.py  device_selector_ui.ui  mainwindow.ui  plugin_analog.py  plugin_log.py  plugin_switch.py  plugin_wave.py  plugin_window.py  readme.txt  weird_view.py  weird_view_client.py
avr/: fuse.c  os_avr.c  serial.c
cmake/: avr-gcc.cmake  helper.cmake
cmake/modules/: helper.cmake
cmake/toolchains/: arm-gcc.cmake  avr-gcc.cmake  avr8-gcc.cmake
docs/: ATMEGA644P.md  AVR-ECLIPSE.md  STM32F407-Discovery.md
docs/kernel/: CONDITION.md  IDLE.md  LOGGING.md  SCHEDULER.md  SEMAPHORE.md  SLEEP.md
examples/: avr_simple.c  ctx_switch.c  enc28j60_demo.c  enc28j60_demo_avr.c  fat_demo.c  fs_buffer_test.c  hdr_parser.c  hello.c  lcd_an_demo.c  lcd_demo.c  mem_test.c  nmea_demo.c  simple.c  simple_charger.c  smart_auto_gen.c  smart_change_over.c  smart_switch_over.c  spi_demo.c  tcp_server_demo.c  tftps_demo.c  udp_echo.c  udp_echo_host.c  usb_cdc_stm32f407.c  weird_view_server_demo.c
examples/hello/: CMakeLists.txt  hello.c
examples/incubator/: CMakeLists.txt  incubator.c  incubator.options.cmake
examples/oled_ssd1306/: CMakeLists.txt  ssd1306.c  ssd1306.options.cmake
examples/smart_change_over/: CMakeLists.txt  smart_change_over.c  smart_change_over.options.cmake
includes/: config.h  os.h  os_avr.h  sch_aperiodic.h  sch_periodic.h  scheduler.h  semaphore.h  serial.h  sleep.h  sll.h  sys_info.h  tasks.h
pld/dimmer/: dimmer.chp  dimmer.fus  dimmer.jed  dimmer.pin  dimmer.pld
pld/dimmer/pcb/: dimmer.kicad_pcb  dimmer.pro  dimmer.sch  sym-lib-table
pld/dimmer/pcb/dimmer/: dimmer.pro  dimmer.sch
port/: CMakeLists.txt
port/kernel/: CMakeLists.txt  kernel_target.h  os_target.h
port/kernel/avr/: CMakeLists.txt  avr.c  avr.h  os_avr.h
port/kernel/cortex-m0/: CMakeLists.txt  cortex_m0.c  cortex_m0.h
port/kernel/cortex-m3/: CMakeLists.txt  cortex_m3.c  cortex_m3.h
port/kernel/cortex-m4/: CMakeLists.txt  cortex_m4.c  cortex_m4.h  os_cortex_m4.c
port/os/: os_target.h
port/os/avr/: os_avr.c  os_avr.h
port/os/cortex-m3/: os_cortex_m3.c  os_cortex_m3.h
port/os/cortex-m4/: os_cortex_m4.c  os_cortex_m4.h
port/os/cortex_m3/: os_cortex_m3.c  os_cortex_m3.h
port/toolset/: CMakeLists.txt
port/toolset/gcc-arm/: CMakeLists.txt  arm_gcc.h  io_arm.c  os_arm_gcc.h  os_gcc.h  rtl_arm.c
port/toolset/gcc-avr/: CMakeLists.txt  avr_gcc.h  io_avr.c  os_avr_gcc.h  rtl_avr.c
rtos/: CMakeLists.txt  ERRORS.md
rtos/fs/: CMakeLists.txt  console.c  console.h  fs.c  fs.cmake  fs.h  fs_buffer.c  fs_buffer.cmake  fs_buffer.h  pipe.c  pipe.h
rtos/io/: CMakeLists.txt
rtos/io/adc/: adc.c  adc.h
rtos/io/etherent/: CMakeLists.txt  ethernet.c  ethernet.cmake  ethernet.h
rtos/io/etherent/enc28j60/: CMakeLists.txt  enc28j60.c  enc28j60.cmake  enc28j60.h  enc28j60_spi.c  enc28j60_spi.h
rtos/io/gfx/: CMakeLists.txt  gfx.c  gfx.cmake  gfx.h
rtos/io/gpio/: 1wire.c  1wire.h  CMakeLists.txt  dhtxx.c  dhtxx.h  ds182x.c  ds182x.h  max7219.c  max7219.cmake  max7219.h  pcf8574.c  pcf8574.h
rtos/io/i2c/: CMakeLists.txt  i2c.c  i2c.h  pcf8574.c  pcf8574.h
rtos/io/io/: io.c  io.h
rtos/io/lcd/: CMakeLists.txt  lcd.c  lcd.h  lcd_an.c  lcd_an.cmake  lcd_an.h  lcd_an_pcf8574.c  lcd_an_pcf8574.h
rtos/io/mmc/: CMakeLists.txt  mmc_spi.c  mmc_spi.cmake  mmc_spi.h
rtos/io/nmea/: README.md  nmea.c  nmea.h  nmea_p.c  nmea_p.h  nmea_parser.c  nmea_parser.dot  nmea_parser.rl
rtos/io/oled/: CMakeLists.txt  oled.cmake  oled_ssd1306.c  oled_ssd1306.h
rtos/io/ppp/: CMakeLists.txt  PPP-PACKETS.md  hdlc.c  hdlc.h  modem_chat.c  modem_chat.h  ppp.c  ppp.cmake  ppp.h  ppp_fcs.c  ppp_fcs.h  ppp_hdlc.c  ppp_hdlc.h  ppp_ipcp.c  ppp_ipcp.cmake  ppp_ipcp.h  ppp_lcp.c  ppp_lcp.h  ppp_ncp.c  ppp_ncp.h  ppp_packet.c  ppp_packet.cmake  ppp_packet.h
rtos/io/serial/: serial.c  serial.h
rtos/io/spi/: spi.c  spi.h
rtos/io/usb/: usb.c  usb.h  usb_cdc_console.c  usb_cdc_console.h  usb_fun_cdc.c  usb_fun_cdc.h  usb_fun_cdc_acm.c  usb_fun_cdc_acm.h  usb_fun_device.c  usb_fun_device.h  usb_fun_io_request.c  usb_fun_io_request.h  usb_fun_request.c  usb_fun_request.h  usb_function.c  usb_function.h
rtos/kernel/: CMakeLists.txt  assert.c  assert.cmake  assert.h  assert_options.cmake  condition.c  condition.h  config.h  global.cmake  global_options.cmake  idle.c  idle.cmake  idle.h  kernel.c  kernel.cmake  kernel.h  p_string.h  scheduler.c  scheduler.cmake  scheduler.h  semaphore.c  semaphore.h  sleep.c  sleep.h  sys_info.c  sys_info.h  tasks.c  tasks.cmake  tasks.h
rtos/mem/: CMakeLists.txt  mem.c  mem.cmake  mem.h  mem_dynamic.c  mem_dynamic.cmake  mem_dynamic.h  mem_static.c  mem_static.h  mem_stats.c  mem_stats.h
rtos/net/: CMakeLists.txt  net.c  net.cmake  net.h  net_arp.c  net_arp.h  net_buffer.c  net_buffer.h  net_condition.c  net_condition.cmake  net_condition.h  net_csum.c  net_csum.h  net_device.c  net_device.h  net_dhcp.c  net_dhcp.cmake  net_dhcp.h  net_dhcp_client.c  net_dhcp_client.cmake  net_dhcp_client.h  net_icmp.c  net_icmp.cmake  net_icmp.h  net_ipv4.c  net_ipv4.cmake  net_ipv4.h  net_process.c  net_process.h  net_route.c  net_route.cmake  net_route.h  net_tcp.c  net_tcp.cmake  net_tcp.h  net_udp.c  net_udp.cmake  net_udp.h  net_work.c  net_work.h
rtos/os/: assert.c  assert.h  condition.c  condition.h  config.h  idle.c  idle.h  os.c  os.h  sch_aperiodic.c  sch_aperiodic.h  sch_periodic.c  sch_periodic.h  scheduler.c  scheduler.h  semaphore.c  semaphore.h  sleep.c  sleep.h  sys_info.c  sys_info.h  tasks.c  tasks.h
rtos/utils/: CMakeLists.txt  header.c  header.h  path.c  path.h  rtl.c  rtl.h  sll.c  sll.cmake  sll.h  sys_log.c  sys_log.cmake  sys_log.h
setup/: setup_env_win.bat
src/: os.c  sch_aperiodic.c  sch_periodic.c  scheduler.c  semaphore.c  sleep.c  sll.c  sys_info.c  tasks.c
(+11 files in other folders)
