# Add sub directories.
add_subdirectory( ${CMAKE_CURRENT_SOURCE_DIR}/fs)
add_subdirectory( ${CMAKE_CURRENT_SOURCE_DIR}/io)
add_subdirectory( ${CMAKE_CURRENT_SOURCE_DIR}/kernel)
add_subdirectory( ${CMAKE_CURRENT_SOURCE_DIR}/mem)
add_subdirectory( ${CMAKE_CURRENT_SOURCE_DIR}/net)
add_subdirectory( ${CMAKE_CURRENT_SOURCE_DIR}/utils)
