# Add subdirectories.
if (${CONFIG_FS})
    add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/fs)
endif ()
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/io)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/kernel)
if (${CONFIG_MEMGR})
    add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/mem)
endif ()
if (${CONFIG_NET})
    add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/net)
endif ()
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/utils)