# Add subdirectories.
if (${CONFIG_ADC})
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/adc)
endif ()
if (${CONFIG_ETHERNET})
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/etherent)
endif ()
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/gpio)
if (${CONFIG_I2C})
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/i2c)
endif ()
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/io)
if (${CONFIG_LCD_AN})
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/lcd)
endif ()
if (${CONFIG_MMC})
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/mmc)
endif ()
if (${CONFIG_PPP})
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/ppp)
endif ()
if (${CONFIG_SERIAL})
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/serial)
endif ()
if (${CONFIG_SPI})
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/spi)
endif ()