# Various IO drivers.
setup_option_def(CONFIG_ETHERNET OFF DEFINE "Enable ethernet support.")
setup_option_def(CONFIG_ADC OFF DEFINE "Enable ADC support.")
setup_option_def(CONFIG_GFX OFF DEFINE "Enable graphics support.")
setup_option_def(CONFIG_I2C OFF DEFINE "Enable I2C support.")
setup_option_def(CONFIG_LCD_AN OFF DEFINE "Enable Alphanumeric LCD driver.")
setup_option_def(CONFIG_LCD_PCF8574 OFF DEFINE "Enable Alphanumeric LCD driver over PCF8574 GPIO controller.")
setup_option_def(CONFIG_MMC OFF DEFINE "Enable MMC card support.")
setup_option_def(CONFIG_NMEA OFF DEFINE "Enable NMEA parser support.")
setup_option_def(CONFIG_OLED OFF DEFINE "Enable OLED support.")
setup_option_def(CONFIG_PPP OFF DEFINE "Enable PPP protocol support.")
setup_option_def(CONFIG_SERIAL OFF DEFINE "Enable serial IO support.")
setup_option_def(CONFIG_SPI OFF DEFINE "Enable SPI support.")

# Add subdirectories.
if (${CONFIG_ADC})
    add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/adc)
endif ()
if (${CONFIG_ETHERNET})
    add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/etherent)
endif ()
if (${CONFIG_GFX})
    add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/gfx)
endif ()
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/gpio)
if (${CONFIG_I2C})
    add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/i2c)
endif ()
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/io)
if (${CONFIG_LCD_AN})
    add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/lcd_an)
endif ()
if (${CONFIG_MMC})
    add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/mmc)
endif ()
if (${CONFIG_NMEA})
    add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/nmea)
endif ()
if (${CONFIG_OLED})
    add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/oled)
endif ()
if (${CONFIG_PPP})
    add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/ppp)
endif ()
if (${CONFIG_SERIAL})
    add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/serial)
endif ()
if (${CONFIG_SPI})
    add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/spi)
endif ()