# Various IO drivers.
setup_option_def(IO_ETHERNET OFF DEFINE "Enable ethernet support.")
setup_option_def(IO_ADC OFF DEFINE "Enable ADC support.")
setup_option_def(IO_GFX OFF DEFINE "Enable graphics support.")
setup_option_def(IO_I2C OFF DEFINE "Enable I2C support.")
setup_option_def(IO_LCD_AN OFF DEFINE "Enable Alphanumeric LCD driver.")
setup_option_def(IO_MMC OFF DEFINE "Enable MMC card support.")
setup_option_def(IO_NMEA OFF DEFINE "Enable NMEA parser support.")
setup_option_def(IO_OLED OFF DEFINE "Enable OLED support.")
setup_option_def(IO_PPP OFF DEFINE "Enable PPP protocol support.")
setup_option_def(IO_SERIAL OFF DEFINE "Enable serial IO support.")
setup_option_def(IO_SPI OFF DEFINE "Enable SPI support.")

# Add subdirectories.
if (${IO_ADC})
    add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/adc)
endif ()
if (${IO_ETHERNET})
    add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/etherent)
endif ()
if (${IO_GFX})
    add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/gfx)
endif ()
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/gpio)
if (${IO_I2C})
    add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/i2c)
endif ()
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/io)
if (${IO_LCD_AN})
    add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/lcd_an)
endif ()
if (${IO_MMC})
    add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/mmc)
endif ()
if (${IO_NMEA})
    add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/nmea)
endif ()
if (${IO_OLED})
    add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/oled)
endif ()
if (${IO_PPP})
    add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/ppp)
endif ()
if (${IO_SERIAL})
    add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/serial)
endif ()
if (${IO_SPI})
    add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/spi)
endif ()